Fixed the bug. JS is working now. change the big screen layout too

--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
-
-    <script src="scripts/homepage.js"></script>
 </head>
 <body>
     <header>
@@ -35,8 +33,8 @@
             <ul class="list">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Chamber</a></li>
-                <li><a href="#">Github Profile</a></li>
-                <li><a href="#">LinkedIn</a></li>
+                <li><a href="https://github.com/sampsonngobi?tab=overview&from=2025-01-01&to=2025-01-11" target="_blank">Github Profile</a></li>
+                <li><a href="https://www.linkedin.com/in/sampsonengwithsam/" target="_blank">LinkedIn</a></li>
             </ul>
         </nav>
 
@@ -73,9 +71,9 @@
                 <h2>Web And Computer programming Certificate</h2>
             </div>
              <div class="small-btn-container">
+                 <input class="btn small" type="button" value="All">
                  <input class="btn small" type="button" value="CSE">
                  <input class="btn small" type="button" value="WDD">
-                 <input class="btn small" type="button" value="All">
             </div>
             
             <div class="big-btn-container">
