more changes and modifications in JS and CSS

--- a/index.html
+++ b/index.html
@@ -70,19 +70,14 @@
             <div class="card-title">
                 <h2>Web And Computer programming Certificate</h2>
             </div>
-             <div class="small-btn-container">
-                 <input class="btn small" type="button" value="All">
-                 <input class="btn small" type="button" value="CSE">
-                 <input class="btn small" type="button" value="WDD">
+             <div class="btn-container">
+                 <input id="btn-all" class="btn" type="button" value="All">
+                 <input id="btn-cse" class="btn cse" type="button" value="CSE">
+                 <input id="btn-wdd" class="btn wdd" type="button" value="WDD">
             </div>
             
-            <div class="big-btn-container">
-                <input class="btn big" type="button" value="CSE 110">
-                <input class="btn big" type="button" value="WDD 130">
-                <input class="btn big" type="button" value="CSE 111">
-                <input class="btn big" type="button" value="CSE 210">
-                <input class="btn big" type="button" value="WDD 131">
-                <input class="btn big" type="button" value="WDD 231">
+            <div id="course-container">
+                
             </div>
        </div>
     </main>
