Added the course creadit calculation

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
                  <input id="btn-wdd" class="btn wdd" type="button" value="WDD">
             </div>
             
-            <div id="course-container">
-                
-            </div>
+            <div id="course-container"></div>
+            <p class="credit">Total number of credits: <span id="credit"></span></p> 
        </div>
     </main>
 
