Added favicon and open graph tags

--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <meta name="author" content="Sampson Chinedu Ngobi">
     <title>WDD231 course Home page Sampson Chinedu Ngobi </title>
 
+    <!-- open graph tags -->
+    <meta property="og:title" content="WDD231 course Home page Sampson Chinedu Ngobi">
+    <meta property="og:description" content="This page is a course home page for Sampson Chinedu Ngobi in the BYU WDD231, which is part of the software developer course.">
+    <meta property="og:url" content="https://sampsonngobi.github.io/wdd231">
+    <meta property="og:image" content="images.brasilia.webp">
+    <meta property="og:type" content="website">
+
     <!-- style sheets -->
      <link rel="stylesheet" href="styles/normalize.css">
      <link rel="stylesheet" href="styles/homepage.css">
@@ -18,6 +25,9 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+
+    <link rel="icon" href="favicon.ico">
+
 </head>
 <body>
     <header>
