final commit before audits

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -54,6 +54,14 @@
      </header>
 
      <main>
+        <img class="hero" src="images/hero.webp" alt="image of Brasilia">
+        <h2>DIRECTORY</h2>
+
+        <div class="view-toggle">
+            <button id="gridView">Grid</button>
+            <button id="listView">List</button>
+        </div>
+
         <div class="cards" id="cards"></div>
      </main>
 
