first audit corrections

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -10,8 +10,8 @@
     <!-- open graph tags -->
     <meta property="og:title" content="Directory page Sampson Chinedu Ngobi">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="images.brasilia.webp">
-    <meta property="og:url" content="https://sampsonngobi.github.io/wdd231/Chamber/directory.html">
+    <meta property="og:image" content="./images/logo.png">
+    <meta property="og:url" content="http://sampsonngobi.github.io/wdd231/Chamber/directory.html">
     
     
 
@@ -23,9 +23,9 @@
       <script src="scripts/directory.js" defer></script>
 
     <!-- font -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="http://fonts.googleapis.com">
+    <link rel="preconnect" href="http://fonts.gstatic.com" crossorigin>
+    <link href="http://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 
     <link rel="icon" href="favicon.ico">
 </head>
@@ -67,7 +67,7 @@
 
      <footer>
         <div class="footer-card top ">
-            <h5>Brasilia Chamber Of Commerce</h4>
+            <h5>Brasilia Chamber Of Commerce</h5>
             <p>Qn 317 conjunto 2 Samambaia</p>
             <p>bdfchamberofcomerce.com</p>
             <p>6188948736</p>
