Use API for the first time

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -21,6 +21,8 @@
 
      <!-- external JS file -->
       <script src="scripts/directory.js" defer></script>
+      <script src="scripts/footer.js" defer></script>
+      <script src="scripts/bamBurgerButton.js" defer></script>
 
     <!-- font -->
     <link rel="preconnect" href="http://fonts.googleapis.com">
