--- a/chamber/index.html
+++ b/chamber/index.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "description" content ="This page is a Chambers Home page for Sampson Chinedu Ngobi in the BYU WDD231, which is part of the software developer course.">
+    <meta name="description" content="This page is a Chambers Home page for Sampson Chinedu Ngobi in the BYU WDD231, which is part of the software developer course.">
     <meta name="author" content="Sampson Chinedu Ngobi">
     <title>Chamber of Commerce Home page Sampson Chinedu Ngobi </title>
 
     <!-- open graph tags -->
     <meta property="og:title" content="home page Sampson Chinedu Ngobi">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="http://sampsonngobi.github.io/wdd231/chamber/images/logo.png">
-    <meta property="og:url" content="http://sampsonngobi.github.io/wdd231/chamber/index.html">
+    <meta property="og:image" content="https://sampsonngobi.github.io/wdd231/images/logo.png">
+    <meta property="og:url" content="https://sampsonngobi.github.io/wdd231/chamber/index.html">
     
       
 
