--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name = "description" content ="This page is a Chambers directory page for Sampson Chinedu Ngobi in the BYU WDD231, which is part of the software developer course.">
+    <meta name="description" content="This page is a Chambers directory page for Sampson Chinedu Ngobi in the BYU WDD231, which is part of the software developer course.">
     <meta name="author" content="Sampson Chinedu Ngobi">
     <title>Directory page Sampson Chinedu Ngobi </title>
 
     <!-- open graph tags -->
     <meta property="og:title" content="Directory page Sampson Chinedu Ngobi">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="./images/logo.png">
-    <meta property="og:url" content="http://sampsonngobi.github.io/wdd231/Chamber/directory.html">
+    <meta property="og:image" content="https://sampsonngobi.github.io/wdd231/images/logo.png">
+    <meta property="og:url" content="https://sampsonngobi.github.io/wdd231/Chamber/directory.html">
     
     
 
@@ -25,9 +25,9 @@
       <script src="scripts/bamBurgerButton.js" defer></script>
 
     <!-- font -->
-    <link rel="preconnect" href="http://fonts.googleapis.com">
-    <link rel="preconnect" href="http://fonts.gstatic.com" crossorigin>
-    <link href="http://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 
     <link rel="icon" href="favicon.ico">
 </head>
