--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <nav class="navigation">
             <ul class="list">
                 <li><a href="#">Home</a></li>
-                <li><a href="#">Chamber</a></li>
+                <li><a href="./chamber/index.html">Chamber</a></li>
                 <li><a href="https://github.com/sampsonngobi?tab=overview&from=2025-01-01&to=2025-01-11" target="_blank">Github Profile</a></li>
                 <li><a href="https://www.linkedin.com/in/sampsonengwithsam/" target="_blank">LinkedIn</a></li>
             </ul>
