corrections after first audit

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -19,18 +19,14 @@
      <link rel="stylesheet" href="styles/normalize.css">
      <link rel="stylesheet" href="styles/join.css">
 
-     <!-- external JS file -->
-      <!-- <script src="scripts/home.js" defer></script> -->
-      <!-- <script src="scripts/footer.js" defer></script> -->
-      <!-- <script src="scripts/hamBurgerButton.js" defer></script> -->
-      <!-- <script src="scripts/weather.js" defer></script> -->
-      <script type="module" src="scripts/join.js" defer></script>
+     
+      <script type="module" src="scripts/join.js"></script>
 
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="http://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 
     <link rel="icon" href="favicon.ico">
 </head>
@@ -114,7 +110,7 @@
                     </label>
                     <label for="phone">Mobile Phone Number* 
                         <input 
-                        type="telephone"
+                        type="Telephone"
                         name="phone"
                         autocomplete ="on"
                         required>
