changed telephone to tell

--- a/chamber/join.html
+++ b/chamber/join.html
@@ -110,7 +110,7 @@
                     </label>
                     <label for="phone">Mobile Phone Number* 
                         <input 
-                        type="Telephone"
+                        type="tel"
                         name="phone"
                         autocomplete ="on"
                         required>
