changes to home

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -21,16 +21,14 @@
      <link rel="stylesheet" href="styles/home.css">
 
      <!-- external JS file -->
-      <script src="scripts/home.js" defer></script>
-      <script src="scripts/footer.js" defer></script>
-      <script src="scripts/bamBurgerButton.js" defer></script>
-      <script src="scripts/weather.js" defer></script>
+      <script type="module" src="scripts/home.js"></script>
+      <!-- <script src="scripts/weather.js" defer></script> -->
 
 
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="http://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 
     <link rel="icon" href="favicon.ico">
 </head>
@@ -51,8 +49,8 @@
             <nav class="navigation">
                 <ul class="list">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#" target="_blank">Dirctory</a></li>
-                    <li><a href="#" target="_blank">Join</a></li>
+                    <li><a href="/chamber/directory.html" target="_blank">Dirctory</a></li>
+                    <li><a href="/chamber/join.html" target="_blank">Join</a></li>
                     <li><a href="#" target="_blank">Discover</a></li>
                 </ul>
             </nav>
