--- a/chamber/index.html
+++ b/chamber/index.html
@@ -22,7 +22,7 @@
 
      <!-- external JS file -->
       <script type="module" src="scripts/home.js"></script>
-      <!-- <script src="scripts/weather.js" defer></script> -->
+      
 
 
     <!-- font -->
@@ -49,8 +49,8 @@
             <nav class="navigation">
                 <ul class="list">
                     <li><a href="#">Home</a></li>
-                    <li><a href="/chamber/directory.html" target="_blank">Dirctory</a></li>
-                    <li><a href="/chamber/join.html" target="_blank">Join</a></li>
+                    <li><a href="directory.html" target="_blank">Directory</a></li>
+                    <li><a href="./join.html" target="_blank">Join</a></li>
                     <li><a href="#" target="_blank">Discover</a></li>
                 </ul>
             </nav>
