site plan for BIM done

--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -47,7 +47,7 @@
             <nav class="navigation">
                 <ul class="list">
                     <li><a href="#">Home</a></li>
-                    <li><a href="#" target="_blank">Dirctory</a></li>
+                    <li><a href="#" target="_blank">Directory</a></li> 
                     <li><a href="#" target="_blank">Join</a></li>
                     <li><a href="#" target="_blank">Discover</a></li>
                 </ul>
