--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -27,7 +27,7 @@
     <!-- font -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="http://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400&display=swap" rel="stylesheet">
 
     <link rel="icon" href="favicon.ico">
 </head>
@@ -57,6 +57,7 @@
      </header>
 
      <main>
+        <h1>BRASILIA</h1>
        <div id="places-card" class="places-card"></div>
     
        <div id="visit-message"></div>
