commit before the store

--- a/bimproject/siteplan.html
+++ b/bimproject/siteplan.html
@@ -42,10 +42,10 @@
         <div>
             <nav class="navigation">
                 <ul class="list">
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">Chamber</a></li>
-                    <li><a href="#" target="_blank">Github Profile</a></li>
-                    <li><a href="#" target="_blank">LinkedIn</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="stores.html">Stores</a></li>
+                    <li><a href="register.html" target="_blank">Register</a></li>
+                    <li><a href="about.html" target="_blank">About</a></li>
                 </ul>
             </nav>
         </div>
