--- a/bimproject/stores.html
+++ b/bimproject/stores.html
@@ -54,7 +54,8 @@
         <h1 class="home">STORES</h1>
         <img class="hero-image" src="images/hero-image.webp" alt="image of Brasilian import market">
         <div class="stores" id="stores"></div>   <!-- stores go here -->
-        <div id="myModal" class="modal"> <span class="close">&times;</span> </div>
+        <dialog id="my-dialog"></dialog>
+
         <section class="weather">
             <h3>Current Weather in Brasilia</h3>
             <img id="weather-icon" src="" alt="current-weather-icon">
